# cp-labs

./: .gitignore  LICENSE  README.md
data/gameoflife/: README.md  data_p04.csv
data/montecarlo/: README.md  data_p00.csv  data_p01.csv  data_p02.csv  data_p03.csv
p00-montecarlo/: README.md  build.gradle.kts  settings.gradle.kts
p00-montecarlo/src/main/kotlin/: main.kt
p01-montecarlo/: README.md  exec.py  exec.sh  pom.xml
p01-montecarlo/src/main/java/: Main.java
p02-montecarlo/: CMakeLists.txt  README.md  data.csv  data_c.csv  data_java.csv  exec.py  exec.sh  main.c  p02_montecarlo  process_results.py
p03-montecarlo/: CMakeLists.txt  README.md  main.c  p03_montecarlo
p03-openmp/: CMakeLists.txt
p04-gameoflife/: CMakeLists.txt  README  README.md  board.py  config.c  config.h  game.c  game.h  glife-board.py  main.c  mem.c  p04_gameoflife  p04_gameoflife.cbp
p04-gameoflife/tests/: 10.in  11.in  12.in  13.in  5.in  6.in  7.in  8.in  9.in
p05-jupyterhadoop/: README.md
p05-jupyterhadoop/code/: mapper_sort.py  mapper_words.py  reducer_sort.py  reducer_words.py
p06-mapreduce/: README.md
scripts/: run-all.py  run-glife.py  run-montecarlo.py
scripts/data/: data_p0.csv  data_p1.csv
